@@ -1,3 +1,9 @@
+1992-06-30  dickey@software.org
+
+	* src/checkout/src/checkout.c: comment
+
+	* src/checkout/src/checkout.c: corrected call on 'cutoff()'
+
 1992-05-27  dickey@software.org
 
 	* certify/release.txt: "%D" and "%d" in '<' command of 'ded'
